--- a/.travis.yml
+++ b/.travis.yml
@@ -34,8 +34,8 @@ script:
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 # 주의: <YOUR NAME>, <COMMIT MESSAGE>와 <YOUR EMAIL>를 변경해야합니다.
-# deploy:
-#   type: git
-#   repo: https://__GITHUB_TOKEN__@github.com/<USER NAME>/<USER NAME>.github.io
-#   branch: master
-#   message: "<COMMIT MESSAGE>"
+deploy:
+  type: git
+  repo: https://__GITHUB_TOKEN__@github.com/doomsheart/doomsheart.github.io
+  branch: master
+  message: "using travis to deploy"
