--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: Asia/Seoul
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: doomsheart.github.io
+url: http://doomsheart.github.io/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -80,3 +80,4 @@ theme: landscape
 deploy:
   type: git
   repo: https://github.com/doomsheart/doomsheart.github.io
+  branch: master
