--- a/_config.yml
+++ b/_config.yml
@@ -79,5 +79,5 @@ theme: landscape
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/doomsheart/doomsheart.github.io
+  repo: https://__GITHUB_TOKEN__@github.com/doomsheart/doomsheart.github.io
   branch: master
