--- a/_config.yml
+++ b/_config.yml
@@ -100,3 +100,11 @@ feed:
   path: rss2.xml
   # 최신 포스트의 갯수 설정. (0 또는 false 입력시 전체 포스트)
   limit: 20
+
+plugins: hexo-generator-robotstxt
+
+# robots.txt
+robotstxt:
+  User-agent: '*'
+  Allow: /
+  Sitemap: /sitemap.xml
